--- a/css1/all.html
+++ b/css1/all.html
@@ -35,15 +35,15 @@
 	<div class="container">
 		<div class="code">
 			<div>项目代码</div>
-			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example1.html">float布局</a></span>
-			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example2.html">flex布局</a></span>
-			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example3.html">grid布局</a></span>
+			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example1.html" target="_blank">float布局</a></span>
+			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example2.html" target="_blank">flex布局</a></span>
+			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example3.html" target="_blank">grid布局</a></span>
 		</div>
 		<div class="show">
 			<div>效果展示</div>
-			<span><a href="example1.html">float布局</a></span>
-			<span><a href="example2.html">flex布局</a></span>
-			<span><a href="example3.html">grid布局</a></span>
+			<span><a href="example1.html" target="_blank">float布局</a></span>
+			<span><a href="example2.html" target="_blank">flex布局</a></span>
+			<span><a href="example3.html" target="_blank">grid布局</a></span>
 		</div>
 		
 	</div>
