--- a/css4/example.html
+++ b/css4/example.html
@@ -3,46 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <link rel="stylesheet" type="text/css" href="task4.css">
 </head>
-<style type="text/css">
-html{
-    height: 100%;
-}
-body{
-    background-color: #eff0f4;
-    height: 100%;
-}
-header{
-    position: fixed;
-    width: 100%;
-    height: 1.375rem;
-    line-height: 1.375rem;
-    background-color: #5fc0cd;
-    color: #fff;
-    text-align: center;
-}
-header .close{
-    position: absolute;
-    left: 0.5rem;
-    font-size: 32px;
-}
-header .login{
-    font-size: 36px;
-}
-header .register{
-    position: absolute;
-    right: 0.5rem;
-    font-size: 32px;
-}
-section{
-    padding-top: 1.375rem;
-}
-section div{
-    height: 1.5625rem;
-    background-color: #fff;
-}
-</style>
+
 <body>
     <header>
         <span class="close">关闭</span>
@@ -50,9 +15,12 @@ section div{
         <span class="register">注册</span>
     </header>
     <section>
-        <div><img src="" alt=""><input type="text" name=""></div>
-        <div><img src="" alt=""><input type="text" name=""></div>
-        
+        <div class="phone"><img src="images/phone.png" alt=""><input type="text" name="" placeholder="请输入手机号"></div>
+        <div class="lock"><img src="images/lock.png" alt=""><input type="text" name="" placeholder="请输入密码"></div>
     </section>
+    <footer>
+        <button>登陆</button>
+        <span>忘记密码？</span>
+    </footer>
 </body>
 </html>
