--- a/css4/test.html
+++ b/css4/test.html
@@ -7,23 +7,18 @@
 	body{
 		margin: 0;
 	}
+	a{
+		width: 500px;
+		line-height: 300px;
+		font-size: 60px;
+		background-color: red;
+	}
 
-		.fa{
-			width: 300px;
-			height: 300px;
-			background-color: yellow;
-		}
-		.fa div{
-			width: 100px;
-			height: 100px;
-			margin-top: 50px;
-			background-color: green;
-		}
-	</style>
+		
+</style>
 </head>
 <body>
-	<div class="fa">
-		<div></div>
-	</div>
+	<a href="">你好</a>
+	<p>aaa</p>
 </body>
 </html>
