--- a/css3/example2.html
+++ b/css3/example2.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-    <title>魔镜</title>
+    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
+    <script type="text/javascript" src="../flexible.js"></script>
+    <link rel="stylesheet" type="text/css" href="../flexible.css">
     <link rel="stylesheet" type="text/css" href="example2.css">
+    <title>魔镜</title>
 </head>
 <body>
         <img class="back" src="images/back.png">
