--- a/css4/example.html
+++ b/css4/example.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
+     <script type="text/javascript" src="../flexible.js"></script>
+    <link rel="stylesheet" type="text/css" href="../flexible.css">
     <link rel="stylesheet" type="text/css" href="task4.css">
 </head>
 
