--- a/css4/test.html
+++ b/css4/test.html
@@ -4,21 +4,30 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
-	body{
-		margin: 0;
-	}
-	a{
-		width: 500px;
-		line-height: 300px;
-		font-size: 60px;
-		background-color: red;
-	}
-
+	.box{
 		
+	}
+	.box{
+		padding-left: 100px;
+	}
+	.img{
+		float: left;
+		width: 100px;
+		height: 100px;
+		background-color: red;
+		margin-left: -100px;
+	}
+	.text{
+		
+	}
 </style>
 </head>
 <body>
-	<a href="">你好</a>
-	<p>aaa</p>
+	<div class="box">
+		<div class="img"></div>
+		<div class="text">为了锻炼资料查找能力，建议所有资料先自行百度得到，尽量不依赖官网提供内容 学习正确的百度姿势为了锻炼资料查找能力，建议所有资料先自行百度得到，尽量不依赖官网提供内容 学习正确的百度姿习正确的百度姿势为了锻炼资料查找能力，建议所有资料先自行百度得到，尽量不依赖官网提供内容 学习正确的百度姿习正确的百度姿势为了锻炼资料查找能力，建议所有资料先自行百度得到，尽量不依赖官网提供内容 学习正确的百度姿势</div>
+	</div>
+	
+
 </body>
 </html>
