--- a/css5/example.html
+++ b/css5/example.html
@@ -56,7 +56,7 @@
         <section class="user">
             <img src="img/user.png" alt="">
             <div class="user-msg">
-                <span class="name">高素雅</span>
+                <span class="name">高素雅</span>x
                 <span class="age">51岁</span>
                 <p><img src="img/pos.png" alt="">北京.通州.果园</p>
             </div>
