--- a/css5/test.html
+++ b/css5/test.html
@@ -7,22 +7,18 @@
     <title>Document</title>
     <style>
         div{
-            width: 500px;
-            height: 400px;
-            border: 1px solid;
-            background-image: url(img/bgImg.png);
-            background-repeat: no-repeat;
-            /* background-size: contain; */
-            background-size: cover;
-            /* background-position: 100px 100px; */
-            /* background-attachment: fixed; */
-            /* overflow-y: scroll; */
+           font-size: 50px;
         }
-        
+        p{
+            font-size: 20px;
+            margin: 0;
+        }
     </style>
 </head>
 <body>
-    <div></div>
+    <div>
+        <p>11</p>
+    </div>
    
 </body>
 </html>
