--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="btn btn-default">
             <a href="css/css5/example.html">CSS5</a>
         </div>
-        <!-- <div class="btn btn-default">
-            <a href="./css6/hugonglist.html">CSS6</a>
-        </div>
         <div class="btn btn-default">
+            <a href="css/css6/example.html">CSS6</a>
+        </div>
+        <!-- <div class="btn btn-default">
             <a href="./css7/index.html">CSS7</a>
         </div>
         <div class="btn btn-default">
