--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="btn btn-default">
             <a href="css/css6/example.html">CSS6</a>
         </div>
-        <!-- <div class="btn btn-default">
-            <a href="./css7/index.html">CSS7</a>
-        </div>
         <div class="btn btn-default">
+            <a href="css/css7/headerPage.html">CSS7</a>
+        </div>
+        <!-- <div class="btn btn-default">
             <a href="./css8/index.html">CSS8</a>
         </div>
         <div class="btn btn-default">
