--- a/css/css8/company.html
+++ b/css/css8/company.html
@@ -180,10 +180,9 @@
                 </div>
             </div>
         </div>
-        <p class="text-center text-footer">
-            <span>Copyright 2015技能书树 www.jnshu.com </span>
-            <span> All Rights Reserved 京ICP备13005880号</span>
-        </p>
+        <div class="footer-tips text-center">
+                <span>Copyright 2015技能书树 www.jnshu.com </span><span class="location"> All Rights Reserved 京ICP备13005880号</span>
+        </div>
     </footer>
     <a href="#top" class="go-top">
         <i class="fa fa-arrow-circle-up fa-4x"></i>
