--- a/css/css8/headerPage.html
+++ b/css/css8/headerPage.html
@@ -13,16 +13,20 @@
 
 <body>
     <header>
-        <div class="top-header ">
-            <div class="left-iphone ">
-                客服热线：010-594-78034
-            </div>
-            <div class="right-icon">
-                <span>
-                    <i class="fa fa-wechat"></i>
-                    <i class="fa fa-qq"></i>
-                    <i class="fa fa-weibo"></i>
-                </span>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 top-header ">
+                    <div class="left-iphone ">
+                    客服热线：010-594-78034
+                </div>
+                <div class="right-icon">
+                    <span>
+                        <i class="fa fa-wechat"></i>
+                        <i class="fa fa-qq"></i>
+                        <i class="fa fa-weibo"></i>
+                    </span>
+                </div>
+                </div>
             </div>
         </div>
         <div class="bg-nav">
@@ -114,7 +118,7 @@
                     <h4>人脉</h4>
                     <p class="msg same-class">同班好友，同院院长，技术大师，入学就混入职脉圈，为以后铺平道路。</p>
                 </div>
-                <div class="col-sm-3 text-left">
+                <div class="col-sm-3 text-left user-icon-box">
                     <div class="user-total">
                         <span class="class-num">
                             <i class="fa fa-user fa-lg" aria-hidden="true"></i>
@@ -173,7 +177,6 @@
                 <div class="col-sm-3 step-container">
                     <span class="round-num">8</span>
                     <span class="user-msg">完成职业技能，升级业界大牛</span>
-                    <i class="fa fa-lg fa-arrow-right"></i>
                 </div>
             </div>
             <!-- 第三行学员展示，标题展示 -->
@@ -216,7 +219,7 @@
             </div>
             <h3 class="stduy-title text-center">战略合作企业</h3>
             <div class="row fourth-row">
-                <div class="company-list">
+                <div class="company-list clearfix">
                     <div class="company-box">
                         <img src="img/company2.png" alt="">
                     </div>
@@ -330,10 +333,9 @@
                 </div>
             </div>
         </div>
-        <p class="text-center text-footer">
-            <span>Copyright 2015技能书树 www.jnshu.com </span>
-            <span> All Rights Reserved 京ICP备13005880号</span>
-        </p>
+        <div class="footer-tips text-center">
+            <span>Copyright 2015技能书树 www.jnshu.com </span><span class="location"> All Rights Reserved 京ICP备13005880号</span>
+        </div>
     </footer>
     <!-- 点击回到页面头的按钮 -->
     <a href="#top" class="go-top">
