--- a/css/css8/user.html
+++ b/css/css8/user.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/headerPage.css"> -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/user.css">
     <title>职位</title>
@@ -47,16 +46,16 @@
                         <!-- 屏幕宽度小于768px时，div.navbar-responsive-collapse容器里的内容都会隐藏，显示icon-bar图标，当点击icon-bar图标时，再展开。屏幕大于768px时，默认显示。 -->
                         <div class="collapse navbar-collapse navbar-responsive-collapse">
                             <ul class="nav navbar-nav nav-ul text-center">
-                                <li>
-                                    <a href="headerPage.html">首页</a>
+                                <li class="header-nav">
+                                    <a  href="headerPage.html">首页</a>
                                 </li>
+                                <li class="job-nav">
+                                    <a  href="user.html">职业</a>
+                                </li >
                                 <li>
-                                    <a href="user.html">职业</a>
+                                    <a  href="company.html">推荐</a>
                                 </li>
-                                <li>
-                                    <a href="company.html">推荐</a>
-                                </li>
-                                <li>
+                                <li class="advice-nav">
                                     <a href="##">关于</a>
                                 </li>
                             </ul>
@@ -79,13 +78,13 @@
             </div>
             <div class=" row second-row">
                 <div class="col-xs-12">
-                    <span class="decration"> 方向：</span>
-                    <a href="##">全部</a>
-                    <a href="#web">前端开发</a>
-                    <a href="#java">后端开发</a>
-                    <a href="#save">移动开发</a>
-                    <a href="#allStation">整站开发</a>
-                    <a href="##">运营维护</a>
+                        <span class="decration "> 方向：</span>
+                        <a class="to-class" href="##">全部</a>
+                        <a class="to-class" href="#web">前端开发</a>
+                        <a class="to-class" href="#java">后端开发</a>
+                        <a class="to-class" href="#save">移动开发</a>
+                        <a class="to-class" href="#allStation">整站开发</a>
+                        <a class="to-class" href="##">运营维护</a>
                 </div>
             </div>
             <div class="row text-row">
@@ -95,13 +94,17 @@
             </div>
             <div class="row table-row">
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
+                                <td colspan="2">
                                     <img class="head-photo" src="img/head-1.jpg" alt="">
-                                </td>
-                                <td>
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -163,13 +166,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
+                                <td colspan="2">
                                     <img class="head-photo" src="img/head-1.jpg" alt="">
-                                </td>
-                                <td>
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -231,13 +238,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
+                                <td colspan="2">
                                     <img class="head-photo" src="img/head-1.jpg" alt="">
-                                </td>
-                                <td>
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -306,13 +317,17 @@
             </div>
             <div class="row table-row">
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-2.jpg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -374,13 +389,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-2.jpg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -442,13 +461,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-2.jpg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -510,19 +533,22 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-3.jpg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
                                     </div>
                                 </td>
-
                             </tr>
                             <tr>
                                 <td>
@@ -578,13 +604,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-3.jpg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -653,13 +683,17 @@
             </div>
             <div class="row table-row">
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-4.jpeg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -721,13 +755,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-4.jpeg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -789,13 +827,17 @@
                     </table>
                 </div>
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-4.jpeg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -864,13 +906,17 @@
             </div>
             <div class="row table-row">
                 <div class="col-md-4">
+                    <div class="bg-container">
+                        <div class="bg-hover">
+                            <span>IOS工程师</span>
+                            <p>IOS是由苹果公司开发的移动操作系统，IOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，同样属于类Unix的商业操作系统。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。国内IOS开发起步相对较晚，人才培养机制更是远远更不上市场发展速度。有限的IOS开发人才成了国内企业必争的资源。</p>
+                        </div>
+                    </div>
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td>
-                                    <img class="head-photo" src="img/head-5.jpg" alt="">
-                                </td>
-                                <td>
+                                <td colspan="2">
+                                    <img class="head-photo" src="img/head-1.jpg" alt="">
                                     <div class="job-title">
                                         <span>Web前端工程师</span>
                                         <p>Web前端工程师，主要职责是利用(X)HTML/CSS/Javascirpt等各种Web技术进行产品的开发。</p>
@@ -936,6 +982,7 @@
     </main>
     <footer>
         <div class="container">
+
             <div class="row top-row">
                 <div class="col-sm-4">
                     <span class="left-title">技能书——改变你我</span>
@@ -963,10 +1010,10 @@
                 </div>
             </div>
         </div>
-        <p class="text-center text-footer">
+        <div class="footer-tips text-center">
             <span>Copyright 2015技能书树 www.jnshu.com </span>
-            <span> All Rights Reserved 京ICP备13005880号</span>
-        </p>
+            <span class="location"> All Rights Reserved 京ICP备13005880号</span>
+        </div>
     </footer>
     <a href="#top" class="go-top">
         <i class="fa fa-arrow-circle-up fa-4x"></i>
