--- a/css/css1/all.html
+++ b/css/css1/all.html
@@ -13,7 +13,7 @@
 			display: flex;
 			width: 100%;
 			height: 300px;
-            margin-top: 150px;
+            margin-top: 200px;
 			align-items: center;
 			justify-content: center;
 		}
@@ -59,23 +59,23 @@
 			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example3.html" target="_blank">grid布局</a></span>
 			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/position1.html" target="_blank">绝对定位布局</a></span>
 			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/line.html" target="_blank">line-height布局</a></span>
-			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/ele.html" target="_blank">伪元素布局</a></span>
+			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/after.html" target="_blank">伪元素布局</a></span>
 			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/three.html" target="_blank">border布局</a></span>
-			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example7.html" target="_blank">单元素布局</a></span>
+			<span><a href="https://github.com/God-Y/task-pages/blob/master/css1/example7-oneDiv.html" target="_blank">单元素布局</a></span>
 		</div>
 		<div class="show">
 			<div>效果展示</div>
 			<span><a href="fixed.html" target="_blank">固定布局</a></span>
 			<span><a href="example1.html" target="_blank">float布局</a></span>
 			<span><a href="example4.html" target="_blank">inline-block布局</a></span>
-			<span><a href="example6.html" target="_blank">vw布局</a></span>
+			<span><a href="example6-vw.html" target="_blank">vw布局</a></span>
 			<span><a href="flex.html" target="_blank">flex布局</a></span>
 			<span><a href="example3.html" target="_blank">grid布局</a></span>
 			<span><a href="position1.html" target="_blank">绝对定位布局</a></span>
-			<span><a href="line-height.html" target="_blank">line-height布局</a></span>
-			<span><a href="three.html" target="_blank">伪元素布局</a></span>
-			<span><a href="ele.html" target="_blank">border布局</a></span>
-			<span><a href="example7.html" target="_blank">单元素布局</a></span>
+			<span><a href="line.html" target="_blank">line-height布局</a></span>
+			<span><a href="after.html" target="_blank">伪元素布局</a></span>
+			<span><a href="three.html" target="_blank">border布局</a></span>
+			<span><a href="example7-oneDiv.html" target="_blank">单元素布局</a></span>
         </div>
         
 		
