--- a/css/css1/ele.html
+++ b/css/css1/ele.html
@@ -22,7 +22,7 @@
         a{
             width: 500px;
             height: 500px;
-            margin: 50px;
+           
             background: chocolate;
         }
         img {
@@ -35,12 +35,11 @@
 <body>
     <h1>block水平元素</h1>
     <div>块级元素</div>
-    <div>块级元素</div>
 
     <h1>inline水平元素</h1>
-    <a href="">行内元素</a>
-    <a href="">行内元素</a>
-    <a href="">行内元素</a>
+    <a href="">行内元素</a><!--
+     --><a href="">行内元素</a><!--
+     --><a href="">行内元素</a>
     <h1>inline-block水平元素</h1>
     <img src="head-3.jpg" alt="">
     <img src="head-3.jpg" alt="">
