--- a/css/css1/line.html
+++ b/css/css1/line.html
@@ -13,7 +13,7 @@
         .line-box{
             width: 100%;
             line-height: 33vw;
-            margin: 0.15 0;
+            margin: 0.15% 0;
         }
         .box {
             display: inline-block;
@@ -22,12 +22,15 @@
             border-radius: 5%;  
 			background-color: rgb(94, 90, 83);            
         }
+        .text {
+            color: #fff;
+        }
     </style>
 </head>
 <body>
     
         <div class="line-box">
-           <div class="box"> x</div><div class="box">&nbsp;</div><div class="box">&nbsp;</div>
+           <div class="box text"> x</div><div class="box">&nbsp;</div><div class="box">&nbsp;</div>
         </div>
         <div class="line-box">
            <div class="box"> &nbsp;</div><div class="box">&nbsp;</div><div class="box">&nbsp;</div>
