--- a/css/css1/ele.html
+++ b/css/css1/ele.html
@@ -37,9 +37,7 @@
     <div>块级元素</div>
 
     <h1>inline水平元素</h1>
-    <a href="">行内元素</a><!--
-     --><a href="">行内元素</a><!--
-     --><a href="">行内元素</a>
+    <a href="">行内元素</a><a href="">行内元素</a><a href="">行内元素</a>
     <h1>inline-block水平元素</h1>
     <img src="head-3.jpg" alt="">
     <img src="head-3.jpg" alt="">
