--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
         <div class="btn btn-default">
             <a href="css/css7/headerPage.html">CSS7</a>
         </div>
+        <div class="btn btn-default">
+            <a href="css/css8/headerPage.html">CSS8</a>
+        </div>
         <!-- <div class="btn btn-default">
-            <a href="./css8/index.html">CSS8</a>
-        </div>
-        <div class="btn btn-default">
             <a href="./css9/9-1.html">CSS9</a>
-        </div>
+        </div> -->
         <div class="btn btn-default">
-            <a href="./css10/index.html">CSS10</a>
+            <a href="css/css10/form.html">CSS10</a>
         </div>
-        <div class="btn btn-default">
+        <!-- <div class="btn btn-default">
             <a href="./css11/index.html">CSS11</a>
-        </div>
-        <div class="btn btn-default">
+        </div> -->
+        <!-- <div class="btn btn-default">
             <a href="./css12/index.html">CSS12</a>
-        </div>
-        <div class="btn btn-default">
+        </div> -->
+        <!-- <div class="btn btn-default">
             <a href="./css13/index.html">CSS13</a>
-        </div>
-        <div class="btn btn-default">
+        </div> -->
+        <!-- <div class="btn btn-default">
             <a href="./css14-15/15-1.html">CSS14-15</a>
-        </div>
-        <br>
+        </div> -->
+        <!-- <br>
         <div class="zhan"></div>
         <div class="btn btn-default">
             <a href="./js1/index.html">JS1</a>
