--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
         <div class="btn btn-default">
             <a href="css/css10/form.html">CSS10</a>
         </div>
-        <!-- <div class="btn btn-default">
-            <a href="./css11/index.html">CSS11</a>
-        </div> -->
-        <!-- <div class="btn btn-default">
-            <a href="./css12/index.html">CSS12</a>
-        </div> -->
+        <div class="btn btn-default">
+            <a href="css/css11/task11.html">CSS11</a>
+        </div>
+        <div class="btn btn-default">
+            <a href="css/css12/lib/index.html">CSS12-1</a>
+        </div>
+        <div class="btn btn-default">
+            <a href="css/css12/lib/list.html">CSS12-2</a>
+        </div>
         <!-- <div class="btn btn-default">
             <a href="./css13/index.html">CSS13</a>
         </div> -->
