--- a/css/css12/lib/list-1.html
+++ b/css/css12/lib/list-1.html
@@ -203,7 +203,7 @@
 
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/list.js">
+    <script src="js/list-1.js">
     </script>
 </body>
 
