--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="css/css12/lib/index.html">CSS12-1</a>
         </div>
         <div class="btn btn-default">
-            <a href="css/css12/lib/list.html">CSS12-2</a>
+            <a href="css/css12/lib/list-1.html">CSS12-2</a>
         </div>
         <!-- <div class="btn btn-default">
             <a href="./css13/index.html">CSS13</a>
