--- a/css/new13/lib/headerPage.html
+++ b/css/new13/lib/headerPage.html
@@ -20,12 +20,12 @@
             </div>
             <div class="game-body">
                 <div class="game-name">捉鬼游戏</div>
-                <a class="verson easy" href="#" id="btn-skip">简单版</a>
+                <div class="verson easy" id="btn-skip">简单版</div>
                 <div class="user-num">有1133个用户正在玩此游戏</div>
-                <a class="verson" href="#">猜词版</a>
+                <div class="verson">猜词版</div>
                 <span class="go-page"></span>
                 <div class="user-num">有1133个用户正在玩此游戏</div>
-                <a class="verson" href="#">白痴版</a>
+                <div class="verson">白痴版</div>
                 <div class="user-num">有1133个用户正在玩此游戏</div>
                 
                 <div class="leaf-point">
