--- a/index.html
+++ b/index.html
@@ -13,71 +13,50 @@
        height: 120px;
        width: 100px;
    } 
+   html {
+       height: 100%;
+   }
    body{
        background-color: #000000;
    }
+   canvas{
+       width: 100%;
+       height: 100%;
+       position: absolute;
+       height: 100%;
+       z-index: -1;
+   }
+   .con {
+       display: inline-flex;
+       flex-direction: column;
+       margin-top: 50px;
+       margin-left: 200px;
+   }
+   .btn-link{
+       color: #fff;
+
+   }
+   .btn-link:hover {
+       color:red;
+   }
 </style>
 <body>
-    <div class="container">
+    <canvas id="canvas" ></canvas>
+    <div class="con">
+        <a href="css/css1/example1.html" class="btn btn-link " role="button">css1</a>
+        <a href="css/css3/example.html" class="btn btn-link " role="button">css3</a>
+        <a href="css/css4/example2.html" class="btn btn-link " role="button">css4</a>
+        <a href="css/css5/example.html" class="btn btn-link " role="button">css5</a>
+        <a href="css/css6/example.html" class="btn btn-link " role="button">css6</a>
+        <a href="css/css7/headerPage.html" class="btn btn-link " role="button">css7</a>
+        <a href="css/css8/headerPage.html" class="btn btn-link " role="button">css8</a>
+        <a href="css/css10/form.html" class="btn btn-link " role="button">css10</a>
+        <a href="css/css11/task11.html" class="btn btn-link " role="button">css11</a>
+        <a href="css/css12/lib/index.html" class="btn btn-link " role="button">css12-1</a>
+        <a href="css/css12/lib/list-1.html" class="btn btn-link " role="button">css12-2</a>
         
-        <div class="zhan"></div>
-        <div class="btn btn-default">
-            <a href="css/css1/example1.html">CSS1</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css3/example.html">CSS3</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css4/example2.html">CSS4</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css5/example.html">CSS5</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css6/example.html">CSS6</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css7/headerPage.html">CSS7</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css8/headerPage.html">CSS8</a>
-        </div>
-        <!-- <div class="btn btn-default">
-            <a href="./css9/9-1.html">CSS9</a>
-        </div> -->
-        <div class="btn btn-default">
-            <a href="css/css10/form.html">CSS10</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css11/task11.html">CSS11</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css12/lib/index.html">CSS12-1</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="css/css12/lib/list-1.html">CSS12-2</a>
-        </div>
-        <!-- <div class="btn btn-default">
-            <a href="./css13/index.html">CSS13</a>
-        </div> -->
-        <!-- <div class="btn btn-default">
-            <a href="./css14-15/15-1.html">CSS14-15</a>
-        </div> -->
-        <!-- <br>
-        <div class="zhan"></div>
-        <div class="btn btn-default">
-            <a href="./js1/index.html">JS1</a>
-        </div class="btn btn-default">
-        <div class="btn btn-default">
-            <a href="./js234/kill.html">JS234</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="./js5/index.html">JS5</a>
-        </div>
-        <div class="btn btn-default">
-            <a href="http://www.wmnblog.xin/#!/admin">JS5-10</a>
-        </div> -->
+        
     </div>
+    <script src="index.js"></script>
 </body>
-
 </html>
