r任务2启动页

--- a/js/js2/bulid/login.html
+++ b/js/js2/bulid/login.html
@@ -6,14 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>登录页</title>
     <link rel="stylesheet" href="css/login.css">
+    <script src="js/login.js"></script>
 </head>
 <body>
+    <time>3s</time>
     <main>
         <span>杀</span>
         <span>人</span>
         <span>游</span>
         <span>戏</span>
     </main>
-    <small><span>葡萄藤</span><span>有</span><span>限公司</span></small>
+    <small><span>葡萄藤</span><span></span>有<span>限公司</span></small>
 </body>
 </html>
