--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div class="con">
         <a href="js/task1/task1.html" class="btn btn-link " role="button">js1</a>
-        <a href="js/js2/bulid/login.html" class="btn btn-link " role="button">js2-4</a>
+        <a href="js/js3/login.html" class="btn btn-link " role="button">js2-4</a>
         
     </div>
     <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
