--- a/js/js3/judePlay.html
+++ b/js/js3/judePlay.html
@@ -23,12 +23,18 @@
         .day-num {
             margin: 10px 0;
         }
+        main{
+            padding-bottom: 1rem;
+        }
         footer {
+
             display: flex;
             align-items: center;
             justify-content: space-around;
             position: fixed;
             bottom: 0;
+            background-color: #fff;
+            z-index: 2;
             height: 1.2rem;
             width: 100%;
         }
