--- a/js/js3/show.html
+++ b/js/js3/show.html
@@ -11,7 +11,7 @@
 <body>
         <header>
                 <i class="back-icon" id="backBtn"></i>
-                <span class="result">游戏结果</span>
+                <span class="result">玩家显示</span>
                 <i class="close-icon"></i>
          </header>
          <main>
